--- a/src/main/resources/settings.fxml
+++ b/src/main/resources/settings.fxml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@menu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@menu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuController">
    <children>
-      <RadioButton layoutX="230.0" layoutY="90.0" mnemonicParsing="false" text="Easy" />
-      <RadioButton layoutX="341.0" layoutY="90.0" mnemonicParsing="false" text="Medium" />
-      <RadioButton layoutX="460.0" layoutY="90.0" mnemonicParsing="false" text="Hard" />
+      <RadioButton layoutX="230.0" layoutY="90.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="49.0" text="Easy" />
+      <RadioButton layoutX="341.0" layoutY="90.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="68.0" text="Medium" />
+      <RadioButton layoutX="460.0" layoutY="90.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="49.0" text="Hard" />
       <Label layoutX="58.0" layoutY="85.0" text="Difficulty">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Line endX="10.0" endY="-113.0" layoutX="180.0" layoutY="154.0" startX="10.0" startY="231.0" />
-      <Line endX="477.5" layoutX="115.0" layoutY="142.0" startX="-115.0" />
+      <Line endX="10.0" endY="-113.0" layoutX="180.0" layoutY="154.0" startX="10.0" startY="104.0" stroke="#c100fc" />
+      <Line endX="477.5" layoutX="115.0" layoutY="142.0" startX="-115.0" stroke="#d902f5" />
+      <Button layoutX="21.0" layoutY="324.0" onAction="#changeToMenu" mnemonicParsing="false" text="Back to Menu" />
    </children>
 </AnchorPane>
