--- a/src/main/resources/settings.fxml
+++ b/src/main/resources/settings.fxml
@@ -3,15 +3,19 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@menu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuController">
    <children>
-      <RadioButton layoutX="230.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToEasy" prefHeight="17.0" prefWidth="49.0" text="Easy" />
-      <RadioButton layoutX="341.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToMedium" prefHeight="17.0" prefWidth="68.0" text="Medium" />
-      <RadioButton layoutX="460.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToHard" prefHeight="17.0" prefWidth="49.0" text="Hard" />
+      <RadioButton fx:id="easyButton" layoutX="230.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToEasy" prefHeight="17.0" prefWidth="59.0" text="Easy">
+         <toggleGroup>
+            <ToggleGroup fx:id="difficulties" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="mediumButton" layoutX="341.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToMedium" prefHeight="17.0" prefWidth="68.0" text="Medium" toggleGroup="$difficulties" />
+      <RadioButton fx:id="hardButton" layoutX="460.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToHard" prefHeight="17.0" prefWidth="68.0" text="Hard" toggleGroup="$difficulties" />
       <Label layoutX="58.0" layoutY="85.0" text="Difficulty">
          <font>
             <Font size="18.0" />
@@ -20,5 +24,6 @@
       <Line endX="10.0" endY="-113.0" layoutX="180.0" layoutY="154.0" startX="10.0" startY="104.0" stroke="#c100fc" />
       <Line endX="477.5" layoutX="115.0" layoutY="142.0" startX="-115.0" stroke="#d902f5" />
       <Button layoutX="21.0" layoutY="324.0" mnemonicParsing="false" onAction="#changeToMenu" text="Back to Menu" />
+      <Button layoutX="156.0" layoutY="324.0" mnemonicParsing="false" onAction="#saveSettings" text="Save" />
    </children>
 </AnchorPane>
