--- a/src/main/resources/settings.fxml
+++ b/src/main/resources/settings.fxml
@@ -1,32 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuController">
    <children>
-      <RadioButton fx:id="easyButton" layoutX="230.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToEasy" prefHeight="17.0" prefWidth="59.0" text="Easy" />
-      <RadioButton fx:id="mediumButton" layoutX="341.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToMedium" prefHeight="17.0" prefWidth="68.0" text="Medium" />
-      <RadioButton fx:id="hardButton" layoutX="460.0" layoutY="90.0" mnemonicParsing="false" onAction="#setToHard" prefHeight="17.0" prefWidth="68.0" text="Hard" />
-      <Label layoutX="58.0" layoutY="85.0" text="Difficulty">
+      <RadioButton fx:id="easyButton" layoutX="230.0" layoutY="137.0" mnemonicParsing="false" onAction="#setToEasy" prefHeight="17.0" prefWidth="59.0" text="Easy" />
+      <RadioButton fx:id="mediumButton" layoutX="340.0" layoutY="137.0" mnemonicParsing="false" onAction="#setToMedium" prefHeight="17.0" prefWidth="68.0" text="Medium" />
+      <RadioButton fx:id="hardButton" layoutX="456.0" layoutY="137.0" mnemonicParsing="false" onAction="#setToHard" prefHeight="17.0" prefWidth="68.0" text="Hard" />
+      <Label layoutX="58.0" layoutY="132.0" text="Difficulty">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Line endX="10.0" endY="-113.0" layoutX="180.0" layoutY="154.0" startX="10.0" startY="104.0" stroke="#c100fc" />
-      <Line endX="477.5" layoutX="115.0" layoutY="142.0" startX="-115.0" stroke="#d902f5" />
-      <Button layoutX="21.0" layoutY="324.0" mnemonicParsing="false" onAction="#changeToMenu" text="Back to Menu" />
-      <Button layoutX="156.0" layoutY="324.0" mnemonicParsing="false" onAction="#saveSettings" text="Save" />
-      <Label layoutX="58.0" layoutY="187.0" text="Language">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <ComboBox layoutX="273.0" layoutY="188.0" prefWidth="150.0" />
+      <Button layoutX="129.0" layoutY="269.0" mnemonicParsing="false" onAction="#changeToMenu" prefHeight="40.0" prefWidth="108.0" text="Back to Menu" />
+      <Button layoutX="355.0" layoutY="269.0" mnemonicParsing="false" onAction="#saveSettings" prefHeight="40.0" prefWidth="68.0" text="Save" />
    </children>
 </AnchorPane>
