--- a/src/main/resources/menu2.fxml
+++ b/src/main/resources/menu2.fxml
@@ -20,7 +20,7 @@
    <Button mnemonicParsing="false" onAction="#changeToProfileSelection" prefHeight="39.0" prefWidth="180.0" text="Log in" />
    <Button mnemonicParsing="false" onAction="#changeToLevelSelection" prefHeight="39.0" prefWidth="180.0" text="Select Level" />
    <Button mnemonicParsing="false" onAction="#changeToLevelCreation" prefHeight="39.0" prefWidth="180.0" text="Create Level" />
-   <Button mnemonicParsing="false" onAction="#changeToSettings" prefHeight="39.0" prefWidth="180.0" text="Settings" />
+   <Button mnemonicParsing="false" onAction="#changeToSettings" prefHeight="39.0" prefWidth="180.0" text="Difficulty" />
    <Button mnemonicParsing="false" onAction="#openHandBook" prefHeight="39.0" prefWidth="181.0" text="Handbook" />
    <Button mnemonicParsing="false" onAction="#exitTheGame" prefHeight="39.0" prefWidth="180.0" text="Exit" />
    <AnchorPane prefHeight="100.0" prefWidth="200.0">
